<resources>
    <string name="app_name">Calculator</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="clean">C</string>
    <string name="equal">=</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="mutiple">*</string>
    <string name="div">/</string>
    <string name="result">Kết quả: </string>
    <string name="operator">Nhập phép tính</string>
</resources>
